initial screen design with navigation setup

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,24 +1,14 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Home Page
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+<ion-content [fullscreen]="true" class="ion-padding">
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer"
-        href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-  <div>
-    <app-camera></app-camera>
+    <ion-button expand="block" size="large" [routerLink]="['/register-user-details']">Register User</ion-button>
+    <ion-button expand="block" size="large" [routerLink]="['/login']">Login</ion-button>
   </div>
 </ion-content>
