--- a/src/app/login-failed/login-failed.page.html
+++ b/src/app/login-failed/login-failed.page.html
@@ -4,10 +4,20 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">login-failed</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Login Failed</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Please click the button to try again.
+      <ion-button expand="block" size="large" [routerLink]="['/login']">Try Again</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
