--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,10 +4,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">login</ion-title>
     </ion-toolbar>
   </ion-header>
+  <div>
+    <div>
+      <!-- This is where the camera will go -->
+    </div>
+    <div>
+      <ion-button size="large" expand="block">Login</ion-button>
+    </div>
+    <div>
+      <!--This is for debugging purpose. Hide it later-->
+      <ion-button size="large" expand="block" id="debugBtn" [routerLink]="['/login-success']">Go to Success
+        Page</ion-button>
+      <ion-button size="large" expand="block" id="debugBtn" [routerLink]="['/login-failed']">Go to Failure
+        Page</ion-button>
+    </div>
+  </div>
 </ion-content>
