registration is success and webcam light is switching off

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -15,7 +15,7 @@
       <!-- This is where the camera will go -->
     </div>
     <div>
-      <ion-button size="large" expand="block">Login</ion-button>
+      <ion-button size="large" expand="block" (click)="authenticateUser()">Login</ion-button>
     </div>
     <div>
       <!--This is for debugging purpose. Hide it later-->
