authentication logic complete and some css added

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,6 +9,6 @@
 <ion-content [fullscreen]="true" class="ion-padding">
   <div id="container">
     <ion-button expand="block" size="large" [routerLink]="['/register-user-details']">Register User</ion-button>
-    <ion-button expand="block" size="large" [routerLink]="['/login']">Login</ion-button>
+    <ion-button expand="block" size="large" [routerLink]="['/login']">Login User</ion-button>
   </div>
 </ion-content>
