--- a/src/app/login-success/login-success.page.html
+++ b/src/app/login-success/login-success.page.html
@@ -16,7 +16,8 @@
     </ion-card-header>
 
     <ion-card-content>
-      Please click the button to go to home page.
+      <ion-text color="tertiary">Welcome {{authenticatedUser}}!</ion-text>
+
       <ion-button expand="block" size="large" [routerLink]="['/home']">Go Home</ion-button>
     </ion-card-content>
   </ion-card>
