--- a/src/app/register-user-face/register-user-face.page.html
+++ b/src/app/register-user-face/register-user-face.page.html
@@ -25,7 +25,8 @@
     <div>
       <!--Show successfull registration message and then redirect message -->
       <!--Hide the button. This is for debug purpose only-->
-      <ion-button expand="block" id="debugBtn" [routerLink]="['/registration-successful']">Go to Next</ion-button>
+      <ion-button class="debug" expand="block" id="debugBtn" [routerLink]="['/registration-successful']">Go to
+        Next</ion-button>
     </div>
   </div>
 </ion-content>
